# fun-scripts

./: README.md  christmas.sh
christmas/: README.md  christmas.sh
discoball/: README.md  discoball.sh  test.txt
new-years/: README.md  new-years.sh
newyears/: README.md  newyears
newyears/src/: main.rs
src/christmas/: Cargo.toml
src/christmas/src/: main.rs
src/discoball/: Cargo.toml
src/discoball/src/: main.rs
src/new-years/: Cargo.toml
src/new-years/src/: lib.rs  main.rs
src/newyears/: Cargo.toml  README.md
src/newyears/src/: lib.rs
